@@ -11,6 +11,7 @@ Features
 Bugfixes
 --------
 
+* Fix plugin removal for plugins that are a package (Issue #2356)
 * Reload English messages for every theme to prevent caching (Issue #2347)
 * Cache theme messages after loading once (Issue #2344)
 * Add ``<link>`` tags to other languages even if the post is
